mysql, phpmyadmin, nginx done, nginx config still in dev

--- a/src/requirements/phpmyadmin/Dockerfile
+++ b/src/requirements/phpmyadmin/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:latest
 
 RUN apt-get update && \
-    apt-get install -y mysql-server && \
+    apt-get install -y php && \
+    apt-get install -y phpmyadmin && \
     apt-get clean
 
 COPY setup.sh /usr/local/bin/
@@ -10,4 +11,4 @@ RUN chmod +x /usr/local/bin/setup.sh
 
 EXPOSE 3306
 
-CMD [ "./usr/local/bin/setup.sh" ] 
+CMD [ "./usr/local/bin/setup.sh" ]
