--- a/src/.env
+++ b/src/.env
@@ -2,3 +2,9 @@ MYSQL_ROOT_PASSWORD=STRONGpassword
 MYSQL_DATABASE=cloud_db
 MYSQL_USER=abouazi
 MYSQL_PASSWORD=STRONGpassword
+
+DOMAIN_NAME=localhost
+TITLE=CLOUD1
+ADMIN=admin
+ADMIN_PWD=STRONGpassword
+ADMIN_EMAIL=admin@localhost
