--- a/src/.env
+++ b/src/.env
@@ -7,4 +7,4 @@ DOMAIN_NAME=localhost
 TITLE=CLOUD1
 ADMIN=admin
 ADMIN_PWD=STRONGpassword
-ADMIN_EMAIL=admin@localhost
+ADMIN_EMAIL=abouazi001@gmail.com
