adding inception to the project

--- a/inception/src/.env
+++ b/inception/src/.env
@@ -1,12 +1,10 @@
-MYSQL_DATABASE=cloud-1
-MYSQL_USER=amiski
-MYSQL_PASSWORD=123456
-MYSQL_ROOT_PASSWORD=123456
+MYSQL_ROOT_PASSWORD=STRONGpassword
+MYSQL_DATABASE=cloud_db
+MYSQL_USER=abouazi
+MYSQL_PASSWORD=STRONGpassword
 
-wp_user_1=user1
-wp_password_1=123456
-wp_email_1=amiski@gmail.com
-
-wp_user_2=user2
-wp_password_2=123456
-wp_email_2=user2@gmail.com
+DOMAIN_NAME=localhost
+TITLE=CLOUD1
+ADMIN=admin
+ADMIN_PWD=STRONGpassword
+ADMIN_EMAIL=abouazi001@gmail.com
