--- a/inception/src/docker-compose.yml
+++ b/inception/src/docker-compose.yml
@@ -28,15 +28,13 @@ services:
         - wordpress
       networks:
         - cloud_1_network
+      restart: always
   mysql:
     container_name: mysql
-    # image: mysql:5.7
     build:
       context: ./services/mysql
     ports:
       - "3306:3306"
-    # env_file:
-    #   - .env
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
