--- a/inception/src/services/mysql/Dockerfile
+++ b/inception/src/services/mysql/Dockerfile
@@ -1,13 +1,26 @@
-FROM ubuntu:latest
+# FROM debian:bullseye
 
-RUN apt-get update && \
-    apt-get install -y mysql-server && \
-    apt-get clean
+# RUN apt-get update && \
+#     apt-get install -y mariadb-server && \
+#     apt-get clean
 
-COPY setup.sh /
+# COPY setup.sh /
+
+# RUN chmod +x /setup.sh
+
+# EXPOSE 3306
+
+# CMD [ "/setup.sh" ]
+
+FROM debian:buster
+
+RUN apt-get update
+RUN apt-get install mariadb-server -y
+
+COPY ./setup.sh /
 
 RUN chmod +x /setup.sh
 
 EXPOSE 3306
 
-CMD [ "/setup.sh" ] 
+CMD [ "/setup.sh" ]
